gitops/apps/home-assistant/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: apps
spec:
  selector:
    app: home-assistant
  ports:
    - name: http
      port: 8123
      targetPort: 8123
      protocol: TCP
